--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ python = "^3.9"
 pydantic = "^2.0.0"
 pandas = "^2.0.0"
 duckdb = "^0.8.0"
+fastapi = "^0.100.0"
+uvicorn = "^0.23.0"
+
+[tool.poetry.dev-dependencies]
+pytest = "^7.4.0"
 
 [build-system]
 requires = ["poetry-core"]
