--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,4 @@ pytest = "^7.4.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+\nscikit-learn = "^1.3.0"\nnumpy = "^1.24.0"\n
